Undid the scale property experiment and redid the widths on my text cards to make them conform to the smaller screen width on mobile; refactored the mobile-first bio pic logic to ensure that the header profile pic does not show up on Projects and Contact; changed the About component to a functional component because it doesn't have any state anyway

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,8 +5,8 @@
 ///GENERAL///
 ///////////*/
 body {
-  width: 100vw;
-  min-width: 640px;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 a {
@@ -154,6 +154,7 @@ h1, h3 {
   padding: 2em;
   margin: 2em 0;
   line-height: 140%;
+  min-width: 300px;
   max-width: 600px;
 }
 
@@ -228,7 +229,7 @@ h1, h3 {
   justify-content: center;
   align-items: center;
   width: 60%;
-  min-width: 550px;
+  min-width: 400px;
   min-height: 200px;
   border-radius: 16px;
   background-color: var(--darkgray);
